# OOP_lab4

./: CMakeLists.txt  README.md  main.cpp
include/:  pentagon.h  array.h  figure.h  figures_utils.h  point.h  rhombus.h  trapezoid.h
